src/bootstrap/test/v0_6/rejects/02_propagate_outside_result_fn/main.zg
# requires: v0.6

fn parse() -> Result[int, str] {
    return Result.Ok(42)
}

fn bad() -> int {
    v := parse()?
    return v
}

print bad()
